# elxvips

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  checksum-Elixir.Elxvips.Native.exs  mix.exs  travis.yml
.github/workflows/: release.yml
lib/: elxvips.ex  native.ex
lib/elxvips/: native.ex
native/common/: bindings.rs  utils.rs
native/lvips/: Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.x86_64-unknown-linux-musl  README.md  build.rs
native/lvips/.cargo/: config  config.toml
native/lvips/lib/: bindings.rs
native/lvips/src/: lib.rs  libvips.rs
native/lvips/src/libvips/: bindings.rs  globals.rs  save_options.rs  utils.rs
native/vipsport/: Cargo.toml  build.rs
native/vipsport/src/: bindings.rs  lib.rs
test/: elxvips_test.exs  output3.avif
