[package]
name = "lvips"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "lvips"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.21.1"
rustler_codegen = "0.21.1"
num_cpus = "1.13.0"

[build-dependencies]
bindgen = "0.53.1"
reqwest = { version = "0.11.2", features = ["blocking"] }
flate2 = "1.0.20"
tar = "0.4.33"
num_cpus = "1.13.0"