[package]
name = "lvips"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "lvips"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
rustler_codegen = "0.21.1"
num_cpus = "1.13.0"
vipsport = { path = "../vipsport" }

[build-dependencies]
vipsport = { path = "../vipsport" }
